--- a/Escc.EastSussexGovUK/css/nav-large.css
+++ b/Escc.EastSussexGovUK/css/nav-large.css
@@ -15,11 +15,11 @@
    Scenario 2: 3 template columns in 12 grid columns. Same context.
                From context, subtract 2 x 18px gutters (894px) then divide by 3 for column width (298px)
 
-   Scenario 3: 2 template columns in 8 grid columns (8 grid columns - 2 x 18px = 602px context)
-               Each template column is 4 grid columns - 18px = 292px
+   Scenario 3: 2 template columns in 8 grid columns (8 grid columns - 18px = 620px context)
+               Each template column is 4 grid columns - 9px = 301px
 
    Scenario 4: 3 template columns in 8 grid columns. Same context.
-               From context, subtract 2 x 18px gutters (566px) then divide by 3 for column width (188.66px)
+               From context, subtract 2 x 18px gutters (584px) then divide by 3 for column width (194.66px)
 */
 .full-page .two-col { width: 49.032258%; }
 .full-page .two-col.odd { margin-right: 1.935484%; }
@@ -27,11 +27,11 @@
 .full-page .three-col { width: 32.043011%; margin-right: 0; }
 .full-page .three-col.group1, .full-page .three-col.group2 { margin-right: 1.935484%;} 
 
-.article .two-col { width: 48.504983%; }
-.article .two-col.odd { margin-right: 2.990033%; }
+.article .two-col { width: 48.548387%; }
+.article .two-col.odd { margin-right: 2.903226%; }
 
-.article .three-col { width: 31.339978%; margin-right: 0;}
-.article .three-col.group1, .article .three-col.group2 { margin-right: 2.990033%;} 
+.article .three-col { width: 31.397849%; margin-right: 0;}
+.article .three-col.group1, .article .three-col.group2 { margin-right: 2.903226%;} 
 
 /* Previous and next navigation in a series of pages. Designed to work inside .text-content. 
    Adjust for 8 column context: now the link is 3.5 columns, with .5 column for the arrow. */
